# OS-Assignment1

./: .gitignore  io.c  main.c  test.sh
1Assignment/: io.c
2Assignment/: CMakeLists.txt  Makefile  README.md  check_mm.c  main.c  mm.c  mm_aux.c  test_mm.c
